--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Semana 1/Miercoles/Primos/nbproject/private/
 /Semana 1/Miercoles/Primos/build/
+/Semana 2/Lunes/Ejercicios/nbproject/private/
+/Semana 2/Lunes/Ejercicios/build/
